fixed upcoming shifts and total shifts

--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -16,3 +16,25 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+.upcoming_card{box-shadow: 0 0 0 0 rgba(80, 101, 136, 1);
+	transform: scale(1);
+  transition: 0.45s ease;
+	animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.97);
+		box-shadow: 0 0 0 0 rgba(80, 101, 136, 0.7);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 10px rgba(80, 101, 136, 0);
+	}
+
+	100% {
+		transform: scale(0.97);
+		box-shadow: 0 0 0 0 rgba(80, 101, 136, 0);
+	}
+}
